--- a/package.json
+++ b/package.json
@@ -7,5 +7,11 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "github": "^9.2.0",
+    "github-api": "^3.0.0",
+    "inquirer": "^3.0.6",
+    "yargs": "^8.0.1"
+  }
 }
