--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "child-process-promise": "^2.2.1",
+    "fuzzy": "^0.1.3",
     "github": "^9.2.0",
-    "github-api": "^3.0.0",
     "inquirer": "^3.0.6",
+    "inquirer-autocomplete-prompt": "^0.8.0",
     "yargs": "^8.0.1"
   }
 }
