--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   },
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "eslint lib/"
   },
   "author": "",
   "license": "ISC",
@@ -18,5 +19,10 @@
     "inquirer": "^3.0.6",
     "inquirer-autocomplete-prompt": "^0.8.0",
     "yargs": "^8.0.1"
+  },
+  "devDependencies": {
+    "eslint": "^3.19.0",
+    "eslint-plugin-prettier": "^2.0.1",
+    "prettier": "^1.3.1"
   }
 }
