--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
   "license": "ISC",
   "dependencies": {
     "child-process-promise": "^2.2.1",
+    "fs-extra": "^3.0.1",
     "fuzzy": "^0.1.3",
     "github": "^9.2.0",
     "inquirer": "^3.0.6",
     "inquirer-autocomplete-prompt": "^0.8.0",
+    "pupa": "^1.0.0",
     "request": "^2.81.0",
+    "tmp": "0.0.31",
     "yargs": "^8.0.1"
   },
   "devDependencies": {
